--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,5 +2,5 @@ spring:
   application:
     name: footballer_db
   mongodb:
-    uri: ${MONGO_URL};
-    auto-index-creation: true;
+    uri: ${MONGO_URL}
+    auto-index-creation: true
